--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/routes-db
+spring.datasource.username=local-dev
+spring.datasource.password=local-dev
 
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
